Application/regapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reg-app
  labels:
    app: reg-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: reg-app

  template:
    metadata:
      labels:
        app: reg-app
    spec:
      containers:
        - name: reg-app
          image: abdelazizomar/regapp
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
