Application/regapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reg-app-service
  labels:
    app: reg-app
spec:
  selector:
    app: reg-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
